--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "scss/variables";
 @import "scss/buttons";
 @import "scss/form";
+@import "scss/loading";
 @import "scss/tables";
 @import "scss/tabs";
 @import "scss/typography";
