--- a/src/app/core/notify/notification/notification.component.scss
+++ b/src/app/core/notify/notification/notification.component.scss
@@ -19,13 +19,14 @@ $block: notification;
   &__content {
     align-items: center;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     width: 100%;
   }
   &__title {
+    display: flex;
     font-weight: 700;
     line-height: 1;
-    display: flex;
+    margin-left: .875rem;
     width: 100%;
   }
   &__message {
@@ -55,12 +56,8 @@ $block: notification;
     font-variant: normal;
     justify-content: center;
     line-height: 1;
-    margin-right: .875rem;
     min-width: 20px;
     text-rendering: auto;
-    &::before {
-      content: "\f0a1";
-    }
   }
   &--success {
     .notification__icon::before {
@@ -104,11 +101,11 @@ $block: notification;
 @keyframes center {
   0% {
     opacity: 0;
-    //top: -100px;
+    top: -20px;
   }
   100% {
     opacity: 1;
-    //top: 0;
+    top: 0;
   }
 }
 
