--- a/src/scss/_bootstrap-override.scss
+++ b/src/scss/_bootstrap-override.scss
@@ -12,3 +12,9 @@
 .form-control:focus {
   box-shadow: 0 0 2px 0 $border-color;
 }
+
+.form-control:disabled,
+.form-control[readonly] {
+  background-color: #282e33;
+  color: gray;
+}
