--- a/src/scss/_form.scss
+++ b/src/scss/_form.scss
@@ -5,7 +5,7 @@ input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
   color: #f0e6d2 !important;
 }
 
-form.ng-touched {
+form.ng-submitted {
   .ng-invalid {
     box-shadow: 0 0 6px 0 red inset;
   }
