mudada a ordem das tabs na edição de equipe. adicionada informação de nenhuma vaga criada quando a lista está vazia. Ajustado para que o jogador não possa criar dois anúncios da mesma vaga.

--- a/src/app/shared/form-errors/form-errors.component.html
+++ b/src/app/shared/form-errors/form-errors.component.html
@@ -6,6 +6,7 @@
   <div class="form-errors__item" *ngIf="errors.maxlength">
     Deve ter no máximo {{ errors.maxlength['requiredLength']}} caracteres.
   </div>
+  <div class="form-errors__item" *ngIf="errors.email">Email inválido.</div>
   <div class="form-errors__item" *ngIf="errors.passwordsMismatch">As senhas devem ser iguais.</div>
   <div class="form-errors__item" *ngIf="errors.backend">{{ errors.backend }}</div>
   <div class="form-errors__item" *ngIf="errors.equalTo">{{ errors.equalTo }}</div>
