--- a/src/app/teams/teams-list/teams-list.component.html
+++ b/src/app/teams/teams-list/teams-list.component.html
@@ -7,7 +7,7 @@
     <div
       *ngIf="!teams || teams.length === 0"
       class="empty-list">
-      Vocês não possui nenhuma equipe no momento.
+      Você não possui nenhuma equipe no momento.
     </div>
     <table
       *ngIf="teams?.length !== 0"
