Implemetando a visão 'resumo da equipe', para jogadores que acessam o perfil de uma equipe da qual ainda não fazem parte

--- a/src/app/teams/teams-list/teams-list.component.html
+++ b/src/app/teams/teams-list/teams-list.component.html
@@ -26,8 +26,13 @@
         </td>
         <td class="table-list__actions">
           <button
+            *ngIf="owner(team)"
             [routerLink]="['/teams', team.id]"
             class="button button--primary">Gerenciar</button>
+          <button
+            *ngIf="!owner(team)"
+            [routerLink]="['/teams', team.id]"
+            class="button button--primary">Detalhes</button>
         </td>
       </tr>
       </ng-container>
