--- a/src/app/teams/teams-edit/teams-edit.component.html
+++ b/src/app/teams/teams-edit/teams-edit.component.html
@@ -7,11 +7,13 @@
       *ngIf="!editing"
       class="content__title">Nova equipe</h3>
     <a
-      *ngIf="editing"
+      *ngIf="editing && owner"
       href="/teams" class="button button--warning ml-auto mr-3">Excluir equipe</a>
     <a href="/teams" class="button">Voltar</a>
   </div>
-  <div class="content__body">
+  <div
+    *ngIf="owner"
+    class="content__body">
     <ng-container *ngIf="editing">
       <div class="container-fluid px-0">
         <div class="row">
@@ -64,4 +66,8 @@
         [team]="team"></ltb-teams-vacancies>
     </ng-container>
   </div>
+  <ltb-teams-resume
+    *ngIf="!owner"
+    [team]="team">
+  </ltb-teams-resume>
 </div>
