Iniciando a dinamização da parte de aceitar ou recusar um candidato

--- a/src/app/teams/teams-edit/teams-edit.component.html
+++ b/src/app/teams/teams-edit/teams-edit.component.html
@@ -58,7 +58,8 @@
         <ltb-teams-members></ltb-teams-members>
       </ng-container>
       <ng-container *ngSwitchCase="tabs.TeamCandidates">
-        <ltb-teams-candidates></ltb-teams-candidates>
+        <ltb-teams-candidates
+          [(team)]="team"></ltb-teams-candidates>
       </ng-container>
       <ltb-teams-vacancies
         *ngSwitchCase="tabs.TeamVacancies"
