--- a/src/app/teams/teams-candidates/teams-candidates.component.html
+++ b/src/app/teams/teams-candidates/teams-candidates.component.html
@@ -3,66 +3,30 @@
   <tr>
     <th>Posição</th>
     <th>Nome</th>
-    <th>A.M.A</th>
     <th></th>
   </tr>
   </thead>
   <tbody>
-  <tr class="member">
+  <tr
+    *ngFor="let candidate of candidates"
+    class="member">
     <td>
-      <img src="assets/images/top-icon.png" alt="" class="member__position">
-    </td>
-    <td>
-      <img
-        class="member__icon"
-        title="SomaKruz"
-        src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/664.png" alt="">
-      <span class="member__nickname">SomaKruz</span>
-    </td>
-    <td>
-      <span class="member__kda">10/2/40</span>
-    </td>
-    <td class="table-list__actions">
-      <button class="button button--warning">Recusar</button>
-      <button class="button button--primary ml-3">Aceitar</button>
-    </td>
-  </tr>
-  <tr class="member">
-    <td>
-      <img src="assets/images/mid-icon.png" alt="" class="member__position">
+      <img [src]="positionIconById(candidate.vacancy.role_id)" alt="" class="member__position">
     </td>
     <td>
       <img
         class="member__icon"
-        title="lukahenry"
-        src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/781.png" alt="">
-      <span class="member__nickname">lukahenry</span>
-    </td>
-    <td>
-      <span class="member__kda">25/10/4</span>
+        title="{{ candidate.summoner.name }}"
+        [src]="profileIconById(candidate.summoner.profile_icon_id)" alt="">
+      <span class="member__nickname">{{ candidate.summoner.name }}</span>
     </td>
     <td class="table-list__actions">
-      <button class="button button--warning">Recusar</button>
-      <button class="button button--primary ml-3">Aceitar</button>
-    </td>
-  </tr>
-  <tr class="member">
-    <td>
-      <img src="assets/images/jungle-icon.png" alt="" class="member__position">
-    </td>
-    <td>
-      <img
-        class="member__icon"
-        title="PHGamerazer"
-        src="http://ddragon.leagueoflegends.com/cdn/6.24.1/img/profileicon/786.png" alt="">
-      <span class="member__nickname">PHGamerazer</span>
-    </td>
-    <td>
-      <span class="member__kda">25/10/4</span>
-    </td>
-    <td class="table-list__actions">
-      <button class="button button--warning">Recusar</button>
-      <button class="button button--primary ml-3">Aceitar</button>
+      <button
+        (click)="reject(candidate.id)"
+        class="button button--warning">Recusar</button>
+      <button
+        (click)="accept(candidate.id)"
+        class="button button--primary ml-3">Aceitar</button>
     </td>
   </tr>
   </tbody>
