--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @import "scss/buttons";
 @import "scss/form";
 @import "scss/loading";
+@import "scss/.modifiers";
 @import "scss/tables";
 @import "scss/tabs";
 @import "scss/typography";
