--- a/src/app/vacancies/vacancies.component.html
+++ b/src/app/vacancies/vacancies.component.html
@@ -91,7 +91,9 @@
         </a>
       </td>
       <td>
-        <a href="" class="button button--primary">Candidatar-se</a>
+        <button
+          (click)="candidateTo(vacancy.id)"
+          class="button button--primary">Candidatar-se</button>
       </td>
     </tr>
     </tbody>
