--- a/src/app/teams/teams-members/teams-members.component.html
+++ b/src/app/teams/teams-members/teams-members.component.html
@@ -22,7 +22,9 @@
       <span class="member__nickname">{{ member.user.nickname }}</span>
     </td>
     <td class="table-list__actions">
-      <button class="button button--warning">Remover</button>
+      <button
+        (click)="remove(member.id)"
+        class="button button--warning">Remover</button>
     </td>
   </tr>
   </tbody>
