modificações para publicação

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,17 @@
   <div class="view__body">
     <div class="container">
       <div class="row">
+        <div class="col-12">
+          <div class="disclaimer">
+            <strong>ATENÇÃO!</strong> - este sistema está em fase de testes. Coisas darão errado. E os dados podem ser
+            apagados a qualquer momento! Agradeço aos corajosos e, qualquer feedback pode ser mandado para frontend.guilherme@gmail.com.
+            Não se preocupe, este sistema não pode modificar ou obter acesso à sua conta no League of Legends.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
         <router-outlet></router-outlet>
       </div>
     </div>
