--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,3 +57,10 @@ body {
     cursor: pointer;
   }
 }
+
+.disclaimer {
+  background-color: $bg-color;
+  font-size: 12px;
+  margin: 1rem auto;
+  padding: 1rem;
+}
