ocultado o botão de filtar, na lista de vagas, pois ainda não foi implementado

--- a/src/app/vacancies/vacancies.component.html
+++ b/src/app/vacancies/vacancies.component.html
@@ -1,9 +1,9 @@
 <div class="content">
   <div class="content__header">
     <h3 class="content__title">Vagas anunciadas</h3>
-    <a
+    <!-- <a
       (click)="toggleFilters()"
-      class="button button--primary">Filtrar</a>
+      class="button button--primary">Filtrar</a> -->
   </div>
   <form
     *ngIf="showFilters"
