--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,11 +5,12 @@
   <div class="view__body">
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-12 px-0">
           <div class="disclaimer">
-            <strong>ATENÇÃO!</strong> - este sistema está em fase de testes. Coisas darão errado. E os dados podem ser
-            apagados a qualquer momento! Agradeço aos corajosos e, qualquer feedback pode ser mandado para frontend.guilherme@gmail.com.
+            <strong>ATENÇÃO!</strong> - este sistema está em fase de testes. Coisas darão errado, e os dados podem ser
+            apagados a qualquer momento! Qualquer feedback pode ser enviado para feedback@lolteambuilder.com.
             Não se preocupe, este sistema não pode modificar ou obter acesso à sua conta no League of Legends.
+            Obrigado a todos os que se aventurarem a testar e ajudar nesta fase de testes.
           </div>
         </div>
       </div>
@@ -25,3 +26,4 @@
   </div>
 </div>
 <ltb-notify></ltb-notify>
+<router-outlet name="modal"></router-outlet>
