--- a/src/scss/_view.scss
+++ b/src/scss/_view.scss
@@ -36,7 +36,8 @@
   display: flex;
   flex-flow: column;
   flex: 1 1 auto;
-  margin-top: 90px;
+  // margin-top: 90px;
+  margin-top: 9;
   padding: 1rem 1rem 2rem;
   width: 100%;
   &__header {
