implementado sistema no auth.service para identificar token expirado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
             apagados a qualquer momento! Qualquer feedback pode ser enviado para feedback@lolteambuilder.com.
             Não se preocupe, este sistema não pode modificar ou obter acesso à sua conta no League of Legends.
             Obrigado a todos os que se aventurarem a testar e ajudar nesta fase de testes.
+            IMPORTANTE: os dados produzidos serão mantidos até às 22h do dia 24/06/2018.
           </div>
         </div>
       </div>
