Removido link de ajuda, adicionado favicon

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -22,11 +22,11 @@
       routerLink="teams"
       class="menu__link">Equipes</a>
   </li>
-  <li class="menu__item">
+  <!-- <li class="menu__item">
     <a
       (click)="hideMenuMobile()"
       class="menu__link">Ajuda</a>
-  </li>
+  </li> -->
 </ul>
 <div class="user">
   <a
