Modificado o menu 'Equipes' para 'Minhas equipes' - from feedbacks

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
       (click)="hideMenuMobile()"
       routerLinkActive="menu__link--active"
       routerLink="teams"
-      class="menu__link">Equipes</a>
+      class="menu__link">Minhas equipes</a>
   </li>
   <!-- <li class="menu__item">
     <a
