mensagem de desativação

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,14 @@
       <div class="row">
         <div class="col-12 px-0">
           <div class="disclaimer">
-            <strong>ATENÇÃO!</strong> - este sistema está em fase de testes. Coisas darão errado, e os dados podem ser
+            <!-- <strong>ATENÇÃO!</strong> - este sistema está em fase de testes. Coisas darão errado, e os dados podem ser
             apagados a qualquer momento! Qualquer feedback pode ser enviado para feedback@lolteambuilder.com.
             Não se preocupe, este sistema não pode modificar ou obter acesso à sua conta no League of Legends.
             Obrigado a todos os que se aventurarem a testar e ajudar nesta fase de testes.
-            IMPORTANTE: os dados produzidos serão mantidos até às 22h do dia 24/06/2018.
+            IMPORTANTE: os dados produzidos serão mantidos até às 22h do dia 24/06/2018. -->
+            <h3 class="text-center">Obrigado a todos que participaram dos primeiros testes. O Lol Team Builder volta a partir de 15/07/2018, para 
+              uma nova rodada de testes!
+            </h3>
           </div>
         </div>
       </div>
