--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
 <ul
   [class.menu--show]="showMenuMobile"
   class="menu">
-  <li class="menu__item">
+  <!-- <li class="menu__item">
     <a
       (click)="hideMenuMobile()"
       routerLinkActive="menu__link--active"
@@ -21,7 +21,7 @@
       routerLinkActive="menu__link--active"
       routerLink="teams"
       class="menu__link">Minhas equipes</a>
-  </li>
+  </li> -->
   <!-- <li class="menu__item">
     <a
       (click)="hideMenuMobile()"
@@ -29,10 +29,10 @@
   </li> -->
 </ul>
 <div class="user">
-  <a
+  <!-- <a
     *ngIf="!isLoggedIn"
     routerLink="login"
-    class="user__login">Entrar</a>
+    class="user__login">Entrar</a> -->
   <ng-container *ngIf="isLoggedIn">
     <img
       (click)="toggleMenuUser()"
